--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -5,14 +5,23 @@ $footer-black: #333333;
 $footer-background: #efefef;
 $footer-font-black: #979797;
 $font-color-main: #000000;
-
+$main-learn-bg: #f6f6f6;
 $font-size-large: 28px;
 $font-size-medium: 18px;
 $font-size-small: 13px;
 $font-size-very-small: 12px;
-
-$font-family-Roboto: 'Roboto', Arial, sans-serif;
-$font-family-Roboto-Medium: 'Roboto-Medium', Arial, sans-serif;
-$font-family-CormorantUnicase-Regular: 'CormorantUnicase-Regular', Arial, sans-serif;
-$font-family-CormorantUnicase-Bold: 'CormorantUnicase-Bold', Arial, sans-serif;
-
+$font-family-Roboto: 'Roboto',
+Arial,
+sans-serif;
+$font-family-Roboto-Medium: 'Roboto-Medium',
+Arial,
+sans-serif;
+$font-family-CormorantUnicase-Regular: 'CormorantUnicase-Regular',
+Arial,
+sans-serif;
+$font-family-CormorantUnicase-Bold: 'CormorantUnicase-Bold',
+Arial,
+sans-serif;
+$font-family-Roboto-Bold: 'Roboto-Bold',
+Arial,
+sans-serif;
