--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,10 +1,9 @@
-
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   src: url('../fonts/Roboto-Regular.woff') format('woff'),
-       url('../fonts/Roboto-Regular.woff2') format('woff2')
+    url('../fonts/Roboto-Regular.woff2') format('woff2')
 }
 
 @font-face {
@@ -12,7 +11,15 @@
   font-style: normal;
   font-weight: 400;
   src: url('../fonts/Roboto-Medium.woff') format('woff'),
-       url('../fonts/Roboto-Medium.woff2') format('woff2')
+    url('../fonts/Roboto-Medium.woff2') format('woff2')
+}
+
+@font-face {
+  font-family: 'Roboto-Bold';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/Roboto-Bold.woff') format('woff'),
+    url('../fonts/Roboto-Bold.woff2') format('woff2')
 }
 
 @font-face {
@@ -20,7 +27,7 @@
   font-style: normal;
   font-weight: 400;
   src: url('../fonts/CormorantUnicase-Regular.woff') format('woff'),
-       url('../fonts/CormorantUnicase-Regular.woff2') format('woff2')
+    url('../fonts/CormorantUnicase-Regular.woff2') format('woff2')
 }
 
 @font-face {
@@ -28,6 +35,5 @@
   font-style: normal;
   font-weight: 400;
   src: url('../fonts/CormorantUnicase-Bold.woff') format('woff'),
-       url('../fonts/CormorantUnicase-Bold.woff2') format('woff2')
+    url('../fonts/CormorantUnicase-Bold.woff2') format('woff2')
 }
-
