--- a/src/scss/normalize.scss
+++ b/src/scss/normalize.scss
@@ -341,3 +341,12 @@ template {
 [hidden] {
   display: none;
 }
+*{
+  box-sizing: border-box;
+  font-size: 13px;
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+}
