--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -10,6 +10,7 @@ $font-size-large: 28px;
 $font-size-medium: 18px;
 $font-size-small: 13px;
 $font-size-very-small: 12px;
+$color-background: black;
 $font-family-Roboto: 'Roboto',
 Arial,
 sans-serif;
