--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,8 @@
 @import 'normalize';
 @import 'fonts';
 @import 'variables';
+@import 'header';
 @import 'main';
-@import 'footer.scss'
+@import 'footer';
 
 
