--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -110,11 +110,26 @@
         background-color: $footer-black;
         border: none;
         color: $font-color-white;
+        position: relative;
+        cursor: pointer;
       }
-      .footer__news-button::before {
-        content: "";
-        display: block;
-      }
+    //   .footer__news-button::before {
+    //     content: "";
+    //     display: block;
+    //     width: 20px;
+    //     height: 20px;
+    //     background-image: url(../img/paper-airplane-outline.png);
+    //     background-size: cover;
+    //     display: inline-block;
+    //     position: absolute;
+    // }
+    .footer__news-btn{
+        text-decoration: none;
+        color: $font-color-white;
+        // text-align: center;
+        // position: absolute;
+        padding-left: 80px;
+    }
     }
   }
 }
