--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -165,17 +165,19 @@
 
 .header-bottom {
   display: flex;
-  margin-bottom: 40px;
-
+  margin-bottom: calculateRem(40px);
+    @media (max-width: 768px){
+        flex-direction: column;
+    }
   &__select {
     border: 1px solid $footer-font-black;
     color: $footer-font-black;
-    padding: 20px 15px;
+    padding: calculateRem(20px) calculateRem(15px);
     flex-grow: 1;
     font-family: $font-family-Roboto;
     font-size: $font-size-very-small;
     text-transform: uppercase;
-
+    
     &:not(:last-child) {
       border-right: transparent;
     }
@@ -184,10 +186,6 @@
   &__select-reset {
     border-bottom: 2px solid $font-color-main;
     color: $footer-font-black;
-    padding-bottom: 5px;
-    font-family: $font-family-Roboto;
-    font-size: $font-size-very-small;
-    transition: .2s linear;
 
     &:hover {
       color: $font-color-red;
