--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,11 @@
 .wrapper {
-  max-width: 1600px;
+  max-width: 83.3333%;
   margin: 0 auto;
 }
 
 .main {
-  padding: 60px 0 110px 0;
+  padding: calculateRem(60px) 0 calculateRem(110px) 0;
+
 }
 .flex {
   display: flex;
@@ -13,21 +14,30 @@
 }
 
 .content-box:not(:nth-child(n+8)) {
-  margin-bottom: 60px;
+  margin-bottom: calculateRem(60px);
 }
 .content-box {
   width: 380px;
   min-height: 100px;
-
+  margin: 0 auto;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    margin-bottom: calculateRem(60px);
+    width: 100%;
+  }
+  &__float-btn {
+    background-color: transparent;
+    border: none;
+  }
   &__img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
     display: block;
   }
 
   &__img-holder {
     position: relative;
-    margin-bottom: 22px;
+    margin-bottom: calculateRem(22px);
 
     &:hover .content-box__learn-more {
       opacity: 1;
@@ -38,13 +48,13 @@
   &__learn-txt {
     font-size: $font-size-very-small;
     
-    border-bottom: 2px solid black;
-    font-family: $font-family-Roboto-Bold;
+    border-bottom: 1px solid black;
+    font-family: $font-family-Roboto;
     transition: .2s linear;
     &:hover {
       color: $font-color-red;
       transition: .2s linear;
-      border-bottom: 2px solid $font-color-red;
+      border-bottom: 1px solid $font-color-red;
     }
     
   }
@@ -57,14 +67,14 @@
   }
 
   &__collection-name {
-    margin-bottom: 15px;
+    margin-bottom: calculateRem(15px);
     text-align: center;
     font-family: $font-family-Roboto;
     font-size: $font-size-small;
 
     >:last-child {
       border-left: 1px solid $footer-background;
-      padding-left: 4px;
+      padding-left: calculateRem(4px);
     }
   }
 
@@ -77,7 +87,7 @@
 
     &__throught {
       text-decoration: line-through;
-      margin-right: 12px;
+      margin-right: calculateRem(12px);
     }
   }
 
@@ -87,15 +97,15 @@
     background-color: $main-learn-bg;
     display: flex;
     justify-content: space-between;
-    padding: 13px;
+    padding: calculateRem(13px);
     width: 100%;
     opacity: 0;
     transition: .2s linear;
 
     .btn {
       border-radius: 20%;
-      height: 20px;
-      width: 20px;
+      height: calculateRem(20px);
+      width: calculateRem(20px);
       cursor: pointer;
       transition: .2s linear;
       
@@ -110,9 +120,9 @@
   &__sale {
     position: absolute;
     color: $font-color-red;
-    right: 25px;
-    top: 25px;
-    padding: 30px 20px;
+    right: calculateRem(25px);
+    top: calculateRem(25px);
+    padding: calculateRem(30px) calculateRem(20px);
     border-radius: 60%;
     background-color: $font-color-white;
   }
