--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -27,3 +27,8 @@ sans-serif;
 $font-family-Roboto-Bold: 'Roboto-Bold',
 Arial,
 sans-serif;
+
+@function calculateRem($size) {
+    $remSize: $size / 16px;
+    @return #{$remSize}rem;
+  }
