--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -2,14 +2,17 @@
   background-color: $footer-background;
   color: $footer-black;
   .wrapper {
-    width: 1600px;
+    width: 83.33333%;
   }
   .block {
     padding: 105px 0 77px;
-    margin: auto;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; 
     .footer__block1 {
-      margin-right: 150px;
+      @media(min-width:769px){
+        margin-right: 150px;
+      }
       .footer__title {
         font-size: $font-size-large;
         font-family: $font-family-CormorantUnicase-Regular;
@@ -36,7 +39,9 @@
       }
     }
     .footer__block2 {
-      margin-right: 178px;
+      @media(min-width:769px){
+        margin-right: 178px;
+      }
       .footer__subtitle-about {
         font-family: $font-family-Roboto;
         font-size: 18px;
@@ -56,7 +61,9 @@
       }
     }
     .footer__block3 {
-      margin-right: 128px;
+      @media(min-width:769px){
+        margin-right: 128px;
+      }
       .footer__questions-subtitle {
         font-family: $font-family-Roboto;
         font-size: 18px;
@@ -76,7 +83,9 @@
       }
     }
     .footer__block4 {
-      margin-right: 116px;
+      @media(min-width:769px){
+        margin-right: 116px;
+      }
       .footer__join-subtitle {
         font-family: $font-family-Roboto;
         font-size: 18px;
@@ -127,6 +136,23 @@
     .block2__rights{
       color: $font-color-white;
       padding: 20px 0 22px;
+    }
+  }
+  @media (max-width: 768px){
+    .block{
+      flex-direction: column;
+      
+    }
+    .footer__block{
+      margin: 0 auto;
+      text-align: center;
+    }
+    .footer__block4{
+      displey: flex;
+      flex-direction: column;
+      text-align: center;
+
+    }
     }
   }
 }
