--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -6,9 +6,8 @@
   }
   .block {
     padding: 105px 0 77px;
-    
+    margin: auto;
     display: flex;
-    flex-wrap: wrap;
     .footer__block1 {
       margin-right: 150px;
       .footer__title {
