--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -106,6 +106,7 @@
         border: none;
         color: $font-color-white;
         position: relative;
+        cursor: pointer;
       }
       .footer__news-button::before {
         content: "";
@@ -118,6 +119,7 @@
         background-repeat: no-repeat;
         background-position: center;
         border-right: 2px solid $footer-font-black;
+        cursor: pointer;
       }
     }
   }
