--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,13 +17,17 @@
   margin-bottom: calculateRem(60px);
 }
 .content-box {
-  width: 380px;
+  width: 23%;
   min-height: 100px;
   margin: 0 auto;
   @media (max-width: 768px) {
     flex-direction: column;
     margin-bottom: calculateRem(60px);
-    width: 100%;
+    width: 80%;
+    
+  }
+  @media (min-width: 769px) and (max-width: 1200px) {
+    flex-basis: 30%;
   }
   &__float-btn {
     background-color: transparent;
