--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,17 +5,18 @@
 
 .main {
   padding: calculateRem(60px) 0 calculateRem(110px) 0;
-
 }
+
 .flex {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.content-box:not(:nth-child(n+8)) {
+.content-box:not(:nth-child(n + 8)) {
   margin-bottom: calculateRem(60px);
 }
+
 .content-box {
   width: 23%;
   min-height: 100px;
@@ -24,15 +25,16 @@
     flex-direction: column;
     margin-bottom: calculateRem(60px);
     width: 80%;
-    
   }
   @media (min-width: 769px) and (max-width: 1200px) {
     flex-basis: 30%;
   }
+
   &__float-btn {
     background-color: transparent;
     border: none;
   }
+
   &__img {
     width: 100%;
     height: auto;
@@ -45,22 +47,22 @@
 
     &:hover .content-box__learn-more {
       opacity: 1;
-      transition: .2s linear;
+      transition: 0.2s linear;
     }
   }
 
   &__learn-txt {
     font-size: $font-size-very-small;
-    
+
     border-bottom: 1px solid black;
     font-family: $font-family-Roboto;
-    transition: .2s linear;
+    transition: 0.2s linear;
+
     &:hover {
       color: $font-color-red;
-      transition: .2s linear;
+      transition: 0.2s linear;
       border-bottom: 1px solid $font-color-red;
     }
-    
   }
 
   &__collection {
@@ -76,7 +78,7 @@
     font-family: $font-family-Roboto;
     font-size: $font-size-small;
 
-    >:last-child {
+    > :last-child {
       border-left: 1px solid $footer-background;
       padding-left: calculateRem(4px);
     }
@@ -104,18 +106,18 @@
     padding: calculateRem(13px);
     width: 100%;
     opacity: 0;
-    transition: .2s linear;
+    transition: 0.2s linear;
 
     .btn {
       border-radius: 20%;
       height: calculateRem(20px);
       width: calculateRem(20px);
       cursor: pointer;
-      transition: .2s linear;
-      
+      transition: 0.2s linear;
+
       &:hover {
         fill: $font-color-red;
-        transition: .2s linear;
+        transition: 0.2s linear;
         transform: scale(1.2);
       }
     }
