--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,11 @@
 @import 'normalize';
 @import 'fonts';
 @import 'variables';
+
 @import 'header';
 @import 'main';
 @import 'footer';
+
+@import 'reviews';
 
 
