--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  max-width: 1600px;
+  max-width: 83.3333%;
   margin: 0 auto;
 }
 
@@ -12,7 +12,7 @@
   justify-content: space-between;
 }
 
-.content-box:not(:nth-child(n+8)) {
+.content-box:not(:nth-child(n + 8)) {
   margin-bottom: 60px;
 }
 .content-box {
@@ -31,22 +31,21 @@
 
     &:hover .content-box__learn-more {
       opacity: 1;
-      transition: .2s linear;
+      transition: 0.2s linear;
     }
   }
 
   &__learn-txt {
     font-size: $font-size-very-small;
-    
+
     border-bottom: 2px solid black;
     font-family: $font-family-Roboto-Bold;
-    transition: .2s linear;
+    transition: 0.2s linear;
     &:hover {
       color: $font-color-red;
-      transition: .2s linear;
+      transition: 0.2s linear;
       border-bottom: 2px solid $font-color-red;
     }
-    
   }
 
   &__collection {
@@ -62,7 +61,7 @@
     font-family: $font-family-Roboto;
     font-size: $font-size-small;
 
-    >:last-child {
+    > :last-child {
       border-left: 1px solid $footer-background;
       padding-left: 4px;
     }
@@ -90,18 +89,18 @@
     padding: 13px;
     width: 100%;
     opacity: 0;
-    transition: .2s linear;
+    transition: 0.2s linear;
 
     .btn {
       border-radius: 20%;
       height: 20px;
       width: 20px;
       cursor: pointer;
-      transition: .2s linear;
-      
+      transition: 0.2s linear;
+
       &:hover {
         fill: $font-color-red;
-        transition: .2s linear;
+        transition: 0.2s linear;
         transform: scale(1.2);
       }
     }
